--- a/BookLibraryClient/src/app/admin-dashboard/components/countries/add-country/add-country.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/countries/add-country/add-country.component.html
@@ -3,14 +3,14 @@
     <div class="row">
       <div class="col-md-3">
         <div class="form-group">
-          <label>Country Name</label>
-          <input type="text" class="form-control" [(ngModel)]="country.name">
-          <label>Short Name</label>
-          <input type="text" class="form-control" maxlength="3" [(ngModel)]="country.shortName">
-          <label>VAT</label>
-          <input type="number" class="form-control" max="100" [(ngModel)]="country.vat">
-          <label for="book.authors.id">Author</label> 
-          <input type="text" class="form-control" id="book.authors.id" [(ngModel)]="authorId">
+          <label for="country.name">Country Name</label>
+          <input type="text" id="country.name" class="form-control" [(ngModel)]="country.name">
+          <label for="country.shortName">Short Name</label>
+          <input type="text" id="country.shortName" class="form-control" maxlength="3" [(ngModel)]="country.shortName">
+          <label for="country.VAT">VAT</label>
+          <input type="number" id="country.vat" class="form-control" max="100" [(ngModel)]="country.vat">
+          <label for="country.authors.id">Author</label> 
+          <input type="text" class="form-control" id="country.authors.id" [(ngModel)]="authorId">
   
         </div>
       </div>
@@ -36,7 +36,7 @@
           <div class="col">
             Authors:
             <div *ngFor="let author of authors">
-                <input type="radio" name="" id="author" (click)="addAuthor(author.id!)">
+                <input type="checkbox" name="" id="authorId" (click)="addAuthor(author.id!)">
                 {{' ' + author.firstName + ' ' + author.lastName}}
               </div>
           </div>
