--- a/BookLibraryClient/src/app/admin-dashboard/components/genres/add-genre/add-genre.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/genres/add-genre/add-genre.component.html
@@ -3,14 +3,14 @@
     <div class="row">
       <div class="col-md-3">
         <div class="form-group">
-          <label>Genre Name</label>
-          <input type="text" class="form-control" [(ngModel)]="genre.name">
-          <label>Description</label>
-          <textarea type="text" class="form-control" [(ngModel)]="genre.description"></textarea>
-          <label>Is Active?</label>
-          <input type="checkbox" class="form-control" [(ngModel)]="genre.isActive">
-          <label>Books</label>
-          <input type="text" class="form-control" [(ngModel)]="booksId">
+          <label for="genre.name">Genre Name</label>
+          <input type="text" id="genre.name" class="form-control" [(ngModel)]="genre.name">
+          <label for="genre.description">Description</label>
+          <textarea type="text" id="genre.description" class="form-control" [(ngModel)]="genre.description"></textarea>
+          <label for="genre.isActive">Is Active?</label> <br>
+          <input type="checkbox" id="genre.isActive" class="form-control-sm" [(ngModel)]="genre.isActive"> <br>
+          <label for="genre.books">Books</label>
+          <input type="text" id="genre.books" class="form-control" [(ngModel)]="booksId">
         </div>
       </div>
       <div class="col-md-9">
@@ -29,17 +29,20 @@
               <td>{{genre.description}}</td>
               <td>{{genre.isActive}}</td>
             </tr>
-            <textarea class="form-control" value="{{genre.description}}" placeholder="Genre Description" cols="100" rows="10"></textarea>
           </tbody>
+          
         </table>
         <div class="row">
           <div class="col">
             Books:
             <div *ngFor="let book of books">
-                <input type="radio" name="" id="book" (click)="addBooks(book.id!)">
+                <input type="checkbox" name="" id="book" (click)="addBooks(book.id!)">
                 {{' ' + book.title}}
               </div>
           </div>
+          <div class="col">
+          <textarea class="form-control" value="{{genre.description}}" placeholder="Genre Description" cols="20" rows="4"></textarea>
+        </div>
         </div>
       </div>
     </div>
