--- a/BookLibraryClient/src/app/admin-dashboard/components/languages/add-language/add-language.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/languages/add-language/add-language.component.html
@@ -3,12 +3,12 @@
     <div class="row">
       <div class="col-md-3">
         <div class="form-group">
-          <label>Language Name</label>
-          <input type="text" class="form-control" [(ngModel)]="language.name">
-          <label>Short Name</label>
-          <input type="text" class="form-control" maxlength="3" [(ngModel)]="language.shortName">
-          <label>Books</label>
-          <input type="text" class="form-control" [(ngModel)]="booksId">
+          <label for="language.name">Language Name</label>
+          <input type="text" id="language.name" class="form-control" [(ngModel)]="language.name">
+          <label for="language.shortName">Short Name</label>
+          <input type="text" id="language.shortName" class="form-control" maxlength="3" [(ngModel)]="language.shortName">
+          <label for="language.books">Books</label>
+          <input type="text" id="language.books" class="form-control" [(ngModel)]="booksId">
         </div>
       </div>
       <div class="col-md-9">
