--- a/BookLibraryClient/src/app/admin-dashboard/components/orders/add-order/add-order.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/orders/add-order/add-order.component.html
@@ -3,19 +3,16 @@
   <div class="row">
     <div class="col-md-3">
       <div class="form-group">
-        <label>Order ID</label>
-        <input type="text" class="form-control" [(ngModel)]="order.id">
-        <label>Date</label>
-        <input type="date" class="form-control" [(ngModel)]="order.date">
-        <label>Total</label>
-        <input type="date" class="form-control" [(ngModel)]="order.totalRentalPrice">
-        <label>Total With VAT</label>
-        <input type="date" class="form-control" [(ngModel)]="order.totalRentalPriceWithVAT">
-        <hr>
-        <label for="book.publisherId">User</label> 
-        <input type="text" class="form-control" id="book.publisherId" [(ngModel)]="userId">
-        <label>Books</label>
-        <input type="text" class="form-control" [(ngModel)]="booksId">
+        <label for="order.userId">User ID</label>
+        <input type="text" id="userId" class="form-control" [(ngModel)]="userId">
+        <label for="order.date">Date</label>
+        <input type="date" id="order.date" class="form-control" [(ngModel)]="order.date">
+        <label for="order.totalRentalPrice">Total</label>
+        <input type="string" id="order.totalRentalPrice" class="form-control" [(ngModel)]="order.totalRentalPrice">
+        <label for="order.totalRentalPriceWithVAT">Total With VAT</label>
+        <input type="string" id="order.totalRentalPriceWithVAT" class="form-control" [(ngModel)]="order.totalRentalPriceWithVAT">
+        <label for="order.books">Books</label>
+        <input type="text" id="order.books" class="form-control" [(ngModel)]="booksId">
       </div>
     </div>
     <div class="col-md-9">
@@ -50,7 +47,7 @@
         <div class="col">
           Books:
           <div *ngFor="let book of books">
-              <input type="radio" name="" id="book" (click)="addBooks(book.id!)">
+              <input type="checkbox" name="" id="book" (click)="addBooks(book.id!)">
               {{' ' + book.title}}
             </div>
         </div>
