--- a/BookLibraryClient/src/app/admin-dashboard/components/genres/add-genre/add-genre.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/genres/add-genre/add-genre.component.html
@@ -8,7 +8,7 @@
           <label for="genre.description">Description</label>
           <textarea type="text" id="genre.description" class="form-control" [(ngModel)]="genre.description"></textarea>
           <label for="genre.isActive">Is Active?</label> <br>
-          <input type="checkbox" id="genre.isActive" class="form-control-sm" [(ngModel)]="genre.isActive"> <br>
+          <input type="checkbox" name="genre.isActive" id="genre.isActive" class="form-control-sm" [(ngModel)]="genre.isActive"> <br>
           <label for="genre.books">Books</label>
           <input type="text" id="genre.books" class="form-control" [(ngModel)]="booksId">
         </div>
@@ -36,7 +36,7 @@
           <div class="col">
             Books:
             <div *ngFor="let book of books">
-                <input type="checkbox" name="" id="book" (click)="addBooks(book.id!)">
+                <input type="checkbox" name="genre.books" id="booksId" (click)="addBooks(book.id!)">
                 {{' ' + book.title}}
               </div>
           </div>
