--- a/BookLibraryClient/src/app/admin-dashboard/components/user/edit-user/edit-user.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/user/edit-user/edit-user.component.html
@@ -85,8 +85,29 @@
                     id="orders"
                     [(ngModel)]="order.id"
                     name="orders"
-                    disabled
                     /> ID: {{order.id}}
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="orders">Orders</label>
+                <div *ngFor="let order1 of orders">
+                <div *ngIf="!currentUser.orders.id">
+                    <input
+                    type="checkbox"
+                    class="form-control-sm"
+                    id="orders"
+                    [(ngModel)]="order1.id"
+                    name="orders"
+                    /> ID: {{order1.id}}
+                </div>
+                    <input
+                    type="checkbox"
+                    class="form-control-sm"
+                    id="orders"
+                    [(ngModel)]="currentUser.orders.id"
+                    name="orders"
+                    disabled
+                    /> ID: {{order1.id}}
                 </div>
             </div>
         </form>
