--- a/BookLibraryClient/src/app/admin-dashboard/components/genres/add-genre/add-genre.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/genres/add-genre/add-genre.component.html
@@ -11,6 +11,10 @@
           <input type="checkbox" name="genre.isActive" id="genre.isActive" class="form-control-sm" [(ngModel)]="genre.isActive"> <br>
           <label for="genre.books">Books</label>
           <input type="text" id="genre.books" class="form-control" [(ngModel)]="booksId">
+          <ng-container *ngFor="let item of bookArr, let i = index">
+            <ng-container *ngIf="i > 0">,</ng-container>
+            {{item.id}}
+          </ng-container> <br>
         </div>
       </div>
       <div class="col-md-9">
@@ -36,7 +40,7 @@
           <div class="col">
             Books:
             <div *ngFor="let book of books">
-                <input type="checkbox" name="genre.books" id="booksId" (click)="addBooks(book.id!)">
+                <input type="checkbox" name="genre.books" id="booksId" (click)="addToArray(book.id!)">
                 {{' ' + book.title}}
               </div>
           </div>
