--- a/BookLibraryClient/src/app/admin-dashboard/components/books/add-book/add-book.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/books/add-book/add-book.component.html
@@ -65,8 +65,7 @@
           </tr>
         </tbody>
       </table>
-      <textarea class="form-control" value="{{book.description}}" placeholder="Book Description" cols="100"
-        rows="10"></textarea>
+      <textarea class="form-control" value="{{book.description}}" placeholder="Book Description" cols="100" rows="10"></textarea>
       <div class="row">
         <div class="col">
           Publisher:
