--- a/BookLibraryClient/src/app/admin-dashboard/components/books/edit-book/edit-book.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/books/edit-book/edit-book.component.html
@@ -88,8 +88,8 @@
                       type="checkbox"
                       class="form-control-sm"
                       id="authors"
-                      [(ngModel)]="currentBook.authors + ' ' + currentBook.authors"
                       name="authors"
+                      (click)="addToAuthorArray(author.id!)"
                       /> {{author.firstName + ' ' + author.lastName}}
                   </div>
               </div>
@@ -102,14 +102,25 @@
                       type="checkbox"
                       class="form-control-sm"
                       id="genres"
-                      [(ngModel)]="currentBook.genres!.name"
                       name="genres"
+                      (click)="addToGenreArray(genre.id!)"
                       /> {{genre.name}}
                   </div>
               </div>
               </div>
               <div class="col-md-3">
-                3
+                <div class="form-group">
+                  <label for="orders">Orders</label>
+                  <div *ngFor="let order of orders">
+                  <input
+                      type="checkbox"
+                      class="form-control-sm"
+                      id="orders"
+                      name="orders"
+                      (click)="addToGenreArray(order.id!)"
+                      /> {{order.id}}
+                  </div>
+              </div>
               </div>
               <div class="col-md-3">
                 4
