--- a/BookLibraryClient/src/app/admin-dashboard/components/user/add-user/add-user.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/user/add-user/add-user.component.html
@@ -72,6 +72,7 @@
               <input type="checkbox" name="user.orders" id="orderId" (click)="addToArray(order.id!)">
               Order ID: {{order.id}}
             </div>
+            <button class="btn btn-primary" (click)="transferArr()">Check</button>
         </div>
       </div>
     </div>
