--- a/BookLibraryClient/src/app/admin-dashboard/components/genres/edit-genre/edit-genre.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/genres/edit-genre/edit-genre.component.html
@@ -39,13 +39,13 @@
             
             <div class="form-group">
                 <label for="books">Books</label>
-                <div *ngFor="let book of currentGenre.books">
+                <div *ngFor="let book of books">
                 <input
                     type="checkbox"
                     class="form-control-sm"
                     id="books"
-                    [(ngModel)]="book.title"
                     name="books"
+                    (click)="addToArray(book.id!)"
                     /> {{book.title}}
                 </div>
             </div>
