--- a/BookLibraryClient/src/app/admin-dashboard/components/publishers/edit-publisher/edit-publisher.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/publishers/edit-publisher/edit-publisher.component.html
@@ -16,13 +16,13 @@
 
             <div class="form-group">
                 <label for="books">Books</label>
-                <div *ngFor="let book of currentPublisher.books">
+                <div *ngFor="let book of books">
                 <input
                     type="checkbox"
                     class="form-control-sm"
                     id="books"
-                    [(ngModel)]="book.title"
                     name="books"
+                    (click)="addToArray(book.id!)"
                     /> {{book.title}}
                 </div>
             </div>
