--- a/BookLibraryClient/src/app/user-dashboard/components/user-basket/user-basket.component.html
+++ b/BookLibraryClient/src/app/user-dashboard/components/user-basket/user-basket.component.html
@@ -1,180 +1,188 @@
-<div class="container-fluid">
-    <div class="nav-wizards-container">
-      <nav class="nav nav-wizards-1 mb-2">
-        <!-- active -->
-        <div class="nav-item col">
-          <a class="nav-link active" routerLink="user/userBasket">
-            <div class="nav-no">1</div>
-            <div class="nav-text">Basket Review</div>
-          </a>
-        </div>
-        <!-- disabled -->
-        <div class="nav-item col">
-          <a class="nav-link" href="user/paymentInfo">
-            <div class="nav-no">2</div>
-            <div class="nav-text">Payment Info</div>
-          </a>
-        </div>
-    
-        <!-- disabled -->
-        <div class="nav-item col">
-          <a class="nav-link" href="user/orderComplete">
-            <div class="nav-no">3</div>
-            <div class="nav-text">Checkout</div>
-          </a>
-        </div>
-      </nav>
-    </div>
-    
-    <div class="card">
-      <div class="card-body">
-        <section id="portfolio" class="two">
-          <section class="h-100 h-custom" style="background-color: #eee;">
-            <div class="container py-5 h-100">
-              <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col">
-                  <div class="card">
-                    <div class="card-body p-4">
-                      <div class="col">
-                        <h5 class="mb-3"><a routerLink="/user/availableBooks" class="text-body"><i
-                              class="fas fa-long-arrow-alt-left me-2"></i>Continue
-                            shopping</a></h5>
-                        <hr>
-    
-                        <div class="d-flex justify-content-between align-items-center mb-4">
-                          <div>
-                            <p class="mb-1">Shopping cart</p>
-                            <p class="mb-0">You have ( userBasket.count ) items in your cart</p>
+<!-- BEGIN #app -->
+<div id="app" class="app app-header-fixed app-sidebar-fixed">
+  <!-- BEGIN #content -->
+  <div id="content" class="app-content">
+    <!-- END #content -->
+    <div class="container-fluid">
+      <div class="nav-wizards-container">
+        <nav class="nav nav-wizards-1 mb-2">
+          <!-- active -->
+          <div class="nav-item col">
+            <a class="nav-link active" routerLink="user/userBasket">
+              <div class="nav-no">1</div>
+              <div class="nav-text">Basket Review</div>
+            </a>
+          </div>
+          <!-- disabled -->
+          <div class="nav-item col">
+            <a class="nav-link disabled" href="user/paymentInfo">
+              <div class="nav-no">2</div>
+              <div class="nav-text">Payment Info</div>
+            </a>
+          </div>
+
+          <!-- disabled -->
+          <div class="nav-item col">
+            <a class="nav-link disabled" href="user/orderComplete">
+              <div class="nav-no">3</div>
+              <div class="nav-text">Checkout</div>
+            </a>
+          </div>
+        </nav>
+      </div>
+
+      <div class="card">
+        <div class="card-body">
+          <section id="portfolio" class="two">
+            <section class="h-100 h-custom" style="background-color: #eee;">
+              <div class="container py-5 h-100">
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                  <div class="col">
+                    <div class="card">
+                      <div class="card-body p-4">
+                        <div class="col">
+                          <h5 class="mb-3"><a routerLink="/user/availableBooks" class="text-body"><i
+                                class="fas fa-long-arrow-alt-left me-2"></i>Continue
+                              shopping</a></h5>
+                          <hr>
+
+                          <div class="d-flex justify-content-between align-items-center mb-4">
+                            <div>
+                              <p class="mb-1">Shopping cart</p>
+                              <p class="mb-0">You have ( {{currentBasket.books.length}} ) items in your cart</p>
+                            </div>
+                            <div>
+                              Element
+                            </div>
                           </div>
-                          <div>
-                            Element
-                          </div>
-                        </div>
-    
-                        <div class="card mb-3">
-                          <div class="card-body">
-                            <div class="d-flex justify-content-between">
-                              <div class="d-flex flex-row align-items-center">
-                                <div class="box">
-                                  Image
+                          <div *ngFor="let book of currentBasket.books">
+                            <div class="card mb-3">
+                              <div class="card-body">
+                                <div class="d-flex justify-content-between">
+                                  <div class="d-flex flex-row align-items-center">
+                                    <div class="box">
+                                      Image
+                                    </div>
+                                    <div class="ms-3">
+                                      <h3>Title: {{book.title}}</h3>
+                                      <h5>Id: {{book.id}}</h5>
+                                      <p class="small mb-0"> {{book.description}}</p>
+                                    </div>
+                                  </div>
+                                  <div class="d-flex flex-row align-items-center">
+                                    <div style="width: 50px;">
+                                      <p class="fw-normal mb-0">Unit Price: {{book.rentalPrice}}</p>
+                                    </div>
+                                    <div style="width: 80px;">
+                                      <h5 class="mb-0">{{currentBasket.totalRentalPriceWithVAT}}</h5>
+                                    </div>
+                                    <a href="#!" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
+                                  </div>
                                 </div>
-                                <div class="ms-3">
-                                  <h5>Book 1</h5>
-                                  <p class="small mb-0">Book 1 Short
-                                    description</p>
-                                </div>
-                              </div>
-                              <div class="d-flex flex-row align-items-center">
-                                <div style="width: 50px;">
-                                  <p class="fw-normal mb-0">7 days</p>
-                                </div>
-                                <div style="width: 80px;">
-                                  <h5 class="mb-0">0.99€</h5>
-                                </div>
-                                <a href="#!" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                               </div>
                             </div>
                           </div>
-                        </div>
-    
-                        <div class="card mb-3">
-                          <div class="card-body">
-                            <div class="d-flex justify-content-between">
-                              <div class="d-flex flex-row align-items-center">
-                                <div class="box">
-                                  Image
+
+                          <!-- <div class="card mb-3">
+                            <div class="card-body">
+                              <div class="d-flex justify-content-between">
+                                <div class="d-flex flex-row align-items-center">
+                                  <div class="box">
+                                    Image
+                                  </div>
+                                  <div class="ms-3">
+                                    <h5>Book 2</h5>
+                                    <p class="small mb-0">Book 2 Short
+                                      description</p>
+                                  </div>
                                 </div>
-                                <div class="ms-3">
-                                  <h5>Book 2</h5>
-                                  <p class="small mb-0">Book 2 Short
-                                    description</p>
+                                <div class="d-flex flex-row align-items-center">
+                                  <div style="width: 50px;">
+                                    <p class="fw-normal mb-0">7 days</p>
+                                  </div>
+                                  <div style="width: 80px;">
+                                    <h5 class="mb-0">0.99€</h5>
+                                  </div>
+                                  <a href="#!" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                 </div>
-                              </div>
-                              <div class="d-flex flex-row align-items-center">
-                                <div style="width: 50px;">
-                                  <p class="fw-normal mb-0">7 days</p>
-                                </div>
-                                <div style="width: 80px;">
-                                  <h5 class="mb-0">0.99€</h5>
-                                </div>
-                                <a href="#!" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                               </div>
                             </div>
                           </div>
-                        </div>
-    
-    
-                        <div class="card mb-3">
-                          <div class="card-body">
-                            <div class="d-flex justify-content-between">
-                              <div class="d-flex flex-row align-items-center">
-                                <div class="box">
-                                Image
-                              </div>
-                                <div class="ms-3">
-                                  <h5>Book 3</h5>
-                                  <p class="small mb-0">Book 3 Short
-                                    description</p>
+
+                          <div class="card mb-3">
+                            <div class="card-body">
+                              <div class="d-flex justify-content-between">
+                                <div class="d-flex flex-row align-items-center">
+                                  <div class="box">
+                                    Image
+                                  </div>
+                                  <div class="ms-3">
+                                    <h5>Book 3</h5>
+                                    <p class="small mb-0">Book 3 Short
+                                      description</p>
+                                  </div>
                                 </div>
-                              </div>
-                              <div class="d-flex flex-row align-items-center">
-                                <div style="width: 50px;">
-                                  <p class="fw-normal mb-0">7 days</p>
+                                <div class="d-flex flex-row align-items-center">
+                                  <div style="width: 50px;">
+                                    <p class="fw-normal mb-0">7 days</p>
+                                  </div>
+                                  <div style="width: 80px;">
+                                    <h5 class="mb-0">0.99€</h5>
+                                  </div>
+                                  <a href="#!" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                 </div>
-                                <div style="width: 80px;">
-                                  <h5 class="mb-0">0.99€</h5>
-                                </div>
-                                <a href="#!" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                               </div>
                             </div>
                           </div>
-                        </div>
-    
-                        <div class="card mb-3">
-                          <div class="card-body">
-                            <div class="d-flex justify-content-between">
-                              <div class="d-flex flex-row align-items-center">
-                                <div class="box">
-                                  Image
+
+                          <div class="card mb-3">
+                            <div class="card-body">
+                              <div class="d-flex justify-content-between">
+                                <div class="d-flex flex-row align-items-center">
+                                  <div class="box">
+                                    Image
+                                  </div>
+                                  <div class="ms-3">
+                                    <h5>Book 4</h5>
+                                    <p class="small mb-0">Book 4 Short
+                                      description</p>
+                                  </div>
                                 </div>
-                                <div class="ms-3">
-                                  <h5>Book 4</h5>
-                                  <p class="small mb-0">Book 4 Short
-                                    description</p>
+                                <div class="d-flex flex-row align-items-center">
+                                  <div style="width: 50px;">
+                                    <p class="fw-normal mb-0">7 days</p>
+                                  </div>
+                                  <div style="width: 80px;">
+                                    <h5 class="mb-0">0.99€</h5>
+                                  </div>
+                                  <a href="#!" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                 </div>
-                              </div>
-                              <div class="d-flex flex-row align-items-center">
-                                <div style="width: 50px;">
-                                  <p class="fw-normal mb-0">7 days</p>
-                                </div>
-                                <div style="width: 80px;">
-                                  <h5 class="mb-0">0.99€</h5>
-                                </div>
-                                <a href="#!" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
+
+                          <button type="button" class="btn btn-info btn-block btn-lg" routerLink="/user/paymentInfo">
+                            <div class="d-flex justify-content-between">
+                              <span>Total: {{currentBasket.totalRentalPriceWithVAT + ' ' +  currentBasket.currency!}}</span>
+                              <span>Payment <i class="fas fa-long-arrow-alt-right ms-2"></i></span>
+                            </div>
+                          </button>
                         </div>
-                        <button type="button" class="btn btn-info btn-block btn-lg" routerLink="/user/paymentInfo">
-                          <div class="d-flex justify-content-between">
-                            <span>$4818.00</span>
-                            <span>Payment <i class="fas fa-long-arrow-alt-right ms-2"></i></span>
-                          </div>
-                        </button>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-        </section>
-    </section>
-    
+            </section>
+          </section>
+
+        </div>
       </div>
     </div>
-    </div>
-    <!-- BEGIN scroll to top btn -->
-    <a href="javascript:;" class="btn btn-icon btn-circle btn-success btn-scroll-to-top"
-    data-toggle="scroll-to-top" (click)="scrollToTop()">^<i class="fa fa-angle-up"></i></a>
-    <!-- END scroll to top btn -->
-    
+  </div>
+</div>
+
+<!-- BEGIN scroll to top btn -->
+<a href="javascript:;" class="btn btn-icon btn-circle btn-success btn-scroll-to-top" data-toggle="scroll-to-top"
+  (click)="scrollToTop()"><i class="fa fa-angle-up"></i></a>
+<!-- END scroll to top btn -->
