--- a/BookLibraryClient/src/app/user-dashboard/user-dashboard.component.html
+++ b/BookLibraryClient/src/app/user-dashboard/user-dashboard.component.html
@@ -167,7 +167,7 @@
                       </p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-sm btn-outline-secondary">Rent</button>
+                          <button type="button" class="btn btn-sm btn-outline-secondary" (click)="addToBasket()" >Rent</button>
                           <button type="button" class="btn btn-sm btn-outline-secondary"
                             routerLink="/admin/book/{{book.id}}">See
                             details</button>
